bugfix: extra margin

--- a/css/indexstil.css
+++ b/css/indexstil.css
@@ -54,12 +54,13 @@ img {
 
 #bildsource {
   position: relative;
-  background-color: rgba(255, 0, 0, 0.9);
+  z-index: 1;
   font-size: 20px;
   padding: 10px;
-  bottom: 100px;
-  text-decoration: none;
+  top: 500px;
   color: yellow;
+  background-color: rgba(255, 0, 0, 0.9);
+  text-decoration: none;
 }
 
 #bildsource:hover {
@@ -132,6 +133,10 @@ h1 {
     width: 100%;
     height: 1200px;
     text-align: center;
+  }
+
+  #bildsource {
+    top: 1000px;
   }
 
   .textruta1 {
